objects/ASI_MFM_Project_Code__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GnH_GnH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>G&amp;H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Supported_Item__c</fullName>
        <label>G&amp;H Supported Item</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>판촉물/POS 제작</fullName>
                </value>
                <value>
                    <fullName>세팅비</fullName>
                </value>
                <value>
                    <fullName>야유회 지원</fullName>
                </value>
                <value>
                    <fullName>키맨/직원 선물</fullName>
                </value>
                <value>
                    <fullName>키맨/직원 접대</fullName>
                </value>
                <value>
                    <fullName>회식/간식 지원</fullName>
                </value>
                <value>
                    <fullName>기타</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Type__c</fullName>
        <label>AP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Trade Off SA</fullName>
                </value>
                <value>
                    <fullName>Trade AP</fullName>
                </value>
                <value>
                    <fullName>Media A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Other A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>SPTD</fullName>
                </value>
                <value>
                    <fullName>Consumer A&amp;P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Account_Code__c</fullName>
        <label>Account  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Activity_Group__c</fullName>
        <label>Activity Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ByPass_Amount_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPass Amount Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cash_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Code__c</fullName>
        <label>Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Offset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Pre_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Purpose_Ownership__c</fullName>
        <label>Purpose/Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Code</label>
    <listViews>
        <fullName>ASI_MFM_KR_Project_Codes</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Code__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Activity_Group__c</columns>
        <columns>ASI_GnH_GnH__c</columns>
        <columns>ASI_GnH_Supported_Item__c</columns>
        <columns>ASI_MFM_ByPass_Amount_Checking__c</columns>
        <columns>ASI_MFM_Pre_Payment__c</columns>
        <columns>ASI_MFM_Sequence__c</columns>
        <columns>ASI_MFM_Purpose_Ownership__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Project_Code__c.ASI_MFM_KR_Project_Code</value>
        </filters>
        <label>All KR Project Codes</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_KR_Project_Codes_FY1819</fullName>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Code__c</columns>
        <columns>ASI_MFM_Activity_Group__c</columns>
        <columns>ASI_GnH_GnH__c</columns>
        <columns>ASI_GnH_Supported_Item__c</columns>
        <columns>ASI_MFM_ByPass_Amount_Checking__c</columns>
        <columns>ASI_MFM_Pre_Payment__c</columns>
        <columns>ASI_MFM_Purpose_Ownership__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Project_Code__c.ASI_MFM_KR_Project_Code</value>
        </filters>
        <filters>
            <field>ASI_MFM_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY1819</value>
        </filters>
        <label>All KR Project Codes-FY1819</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Codes</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_Project_Code</fullName>
        <active>true</active>
        <label>KR Project Code</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>